After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680590 - epiphany won't start with empty session_state.xml
epiphany won't start with empty session_state.xml
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.5.x
Other Linux
: Normal major
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-25 14:07 UTC by Sebastian Keller
Modified: 2012-07-31 16:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
empty_session.diff (3.06 KB, patch)
2012-07-31 16:10 UTC, Xan Lopez
committed Details | Review

Description Sebastian Keller 2012-07-25 14:07:12 UTC
killall epiphany
cd .config/epiphany/
mv session_state.xml session_state.xml_bak
touch session_state.xml
epiphany

-> nothing happens

rm session_state.xml
epiphany

-> epiphany starts

The session_state.xml ends up empty quite often here due nouveau related crashes and freezes. Maybe atomic writes could help with that, but epiphany should start with an empty session_state.xml anyway.
Comment 1 Xan Lopez 2012-07-31 16:10:14 UTC
Created attachment 219997 [details] [review]
empty_session.diff
Comment 2 Xan Lopez 2012-07-31 16:21:10 UTC
Comment on attachment 219997 [details] [review]
empty_session.diff

Fixed in master.
Comment 3 Xan Lopez 2012-07-31 16:21:27 UTC
Closing.