ephy-session: spawn the default window if the session state file is broken

https://bugzilla.gnome.org/show_bug.cgi?id=680590